--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -1,6 +1,6 @@
 .MapBox{
     margin-top: 30px;
-    margin-bottom: 60px;
+    /* margin-bottom: 60px; */
     margin-right: 5px;
     /* padding: 20px; */
     /* box-shadow: 10px 5px 5px  rgb(16, 33, 48);
@@ -10,12 +10,17 @@
     align-items: center;
 }
 
-.container{
+/* .container{
     margin-right: 10px;
-}
+} */
 
 .mapTitle{
     color: whitesmoke;
     cursor: pointer;
-    margin-top: 40px;
+    margin-top: 20px;
+}
+
+.mapContainer{
+    margin-right: 100px;
+    margin-left: 40px;
 }
