--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,6 +1,7 @@
 .sidebar{
     flex:1;
-    height: calc(100vh-50px);
+    /* height: calc(100vh-50px); */
+    height: 600px;
     /* Not working-color */
     background-color: rgb(21, 21, 20);
     position: sticky;
