--- a/src/pages/updateCamera/updateCamera.css
+++ b/src/pages/updateCamera/updateCamera.css
@@ -13,7 +13,7 @@
 	font: 95% Arial, Helvetica, sans-serif;
 	max-width: 800px;
 	margin: 10px auto;
-	padding: 16px;
+	padding: 5px;
 	background: #F7F7F7;
 }
 .form-style-6 h1{
@@ -85,4 +85,13 @@
 .form-style-6 input[type="submit"]:hover,
 .form-style-6 input[type="button"]:hover{
 	background: #2EBC99;
+}
+
+.EditCameraButton{
+	border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    background-color: rgb(74, 137, 74);
+    color: whitesmoke;
+    cursor: pointer;
 }
