--- a/src/pages/viewcameras/viewCamera.css
+++ b/src/pages/viewcameras/viewCamera.css
@@ -1,34 +1,40 @@
+.editCameraView{
+  padding: 40px;
+  flex: 4;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
     background-color: #2196F3;
-    padding: 10px;
+    padding: 5px;
   }
   .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    font-size: 30px;
+    padding: 5px;
+    font-size: 10px;
+    color: black;
     text-align: center;
   }
   .video-large {
     grid-column: 1;
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
     background: #ccc;
   }
   .video-small-top, .video-small-bottom {
     border: 1px solid #ccc;
-    width: 100%;
+    width: 50%;
   }
   .video-container iframe{ /*change according to your need*/
     min-width: 100%;
-    min-height: 100%;
+    min-height: 20%;
  
   }
   .editCamera{
     flex: 4;
     color: whitesmoke;
-    padding: 20px;
+    padding: 10px;
 }
 
 .editCameraContainer{
@@ -41,3 +47,5 @@
 .button3 {background-color: #f44336;} /* Red */
 .button4 {background-color: #e7e7e7; color: black;} /* Gray */
 .button5 {background-color: #555555;} /* Black */
+
+
